welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: ')' expected but '}' found.
			else {setPos(diagg-6,getMondeHauteur()-1}
                                                                ^